--- a/solutions/microsvc_platforms_problem/index.asciidoc
+++ b/solutions/microsvc_platforms_problem/index.asciidoc
@@ -1,4 +1,4 @@
-//Category=Microservice Platforms, Kubernetes
+//Category=Microservice Platforms; Kubernetes
 //Maturity level=Initial
 
 :toc: macro
