--- a/solutions/provisioning_azure_github/index.asciidoc
+++ b/solutions/provisioning_azure_github/index.asciidoc
@@ -7,8 +7,6 @@ toc::[]
 :idprefix:
 :idseparator: -
 
-image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
-
 == Provisioning Solution GitHub Actions
 === Overview
 
@@ -291,3 +289,8 @@ Using GitHub makes sense in the following scenarios:
 
 * You need cloud agnostic pipelines e.g. due to a multi-cloud scenario
 * Your code repository is GitHub and absence of projects for project management is not a problem or can be replaced with something else such as Azure DevOps
+
+
+= Credits
+
+image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
