--- a/solutions/microsvc_platforms/index.asciidoc
+++ b/solutions/microsvc_platforms/index.asciidoc
@@ -32,6 +32,6 @@ It provides highly available, fully managed OpenShift clusters as *orchestration
 
 Regarding *the applications to be deployed* Azure comes also with its own Azure container reistry (ACR).
 
-= Credits
+== Credits
 
 image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
