--- a/solutions/microsvc_platforms_azure_aks/index.asciidoc
+++ b/solutions/microsvc_platforms_azure_aks/index.asciidoc
@@ -256,6 +256,6 @@ See under infrastructure.
 
 When you want to deploy containerized applications to Azure Kubernetes Service.
 
-= Credits
+== Credits
 
 image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
