--- a/solutions/monitoring_platforms/index.asciidoc
+++ b/solutions/monitoring_platforms/index.asciidoc
@@ -46,6 +46,6 @@ Azure monitor can *integrate* with and forward telemetry from various sources. S
 IT service management tools such as ServiceNow or System Center Service Manager can integrate with Azure monitoring tools.
 Azure provides the standard *compliance mechanisms* also for monitoring which ensure authentication/ authorization (via Azure Active Directory), compliance for data at-rest and in-transit.
 
-= Credits
+== Credits
 
 image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
