--- a/solutions/provisioning_platforms/index.asciidoc
+++ b/solutions/provisioning_platforms/index.asciidoc
@@ -142,6 +142,6 @@ Azure Active Directory is the central service in Azure that defines and controls
 Granularity of roles that can be granted depend on the service. The boundaries in which users exist or permissions can be assigned is also service specific.
 
 
-= Credits
+== Credits
 
 image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
