--- a/solutions/monitoring_azure_native/index.asciidoc
+++ b/solutions/monitoring_azure_native/index.asciidoc
@@ -7,7 +7,7 @@ toc::[]
 :idprefix:
 :idseparator: -
 
-== Azure Monitoring Solution Native
+== Monitoring Solution Azure Native
 === Application Monitoring
 ==== Overview
 
