--- a/solutions/provisioning_platforms/index.asciidoc
+++ b/solutions/provisioning_platforms/index.asciidoc
@@ -15,7 +15,7 @@ toc::[]
 
 This chapter lists major features/ concrete services for provisioning of the Azure platform. This architecture pattern builds on the general problem description for monitoring. The picture below summarizes major services and concepts that are discussed in detail in the next chpater.
 
-image::monitoring_azure.png[Provisioning Azure Overview, width=966, height=526]
+image::provisioning_azure.png[Provisioning Azure Overview, width=966, height=526]
 
 ==== Automation code
 
