--- a/solutions/microservices_platforms/index.asciidoc
+++ b/solutions/microservices_platforms/index.asciidoc
@@ -29,6 +29,25 @@ This service is intended to run single containers without native orchestration s
 --
 It provides highly available, fully managed OpenShift clusters as *orchestration platform* on demand, monitored and operated jointly by Microsoft and Red Hat. Kubernetes is at the core of Red Hat OpenShift. OpenShift brings added-value features to complement Kubernetes, making it a turnkey container platform as a service (PaaS) with a significantly improved developer and operator experience.
 --
+* Azure Container Apps (in preview as of 07.11.2021)
++
+--
+Azure Container Apps allows to build serverless microservices based on containers. https://docs.microsoft.com/en-us/azure/container-apps/compare-options[Distinctive features] of Container Apps include:
+
+** Optimized for running general purpose containers, especially for applications that span many microservices deployed in containers.
+** Powered by Kubernetes and open-source technologies like Dapr, KEDA, and envoy.
+** Supports Kubernetes-style apps and microservices with features like service discovery and traffic splitting.
+** Enables event-driven application architectures by supporting scale based on traffic and pulling from event sources like queues, including scale to zero.
+** Support of long running processes and can run background tasks.
+** All Container Apps are Kubernetes compatible.
+
+Azure Container Apps doesn't provide direct access to the underlying Kubernetes APIs. If you require access to the Kubernetes APIs and control plane, you should use Azure Kubernetes Service. However, if you would like to build Kubernetes-style applications and don't require direct access to all the native Kubernetes APIs and cluster management, Container Apps provides a fully managed experience based on best-practices.
+--
+* Azure Spring Cloud
++
+--
+https://docs.microsoft.com/en-us/azure/container-apps/compare-options[Azure Spring Cloud] makes it easy to deploy Spring Boot microservice applications to Azure without any code changes. The service manages the infrastructure of Spring Cloud applications so developers can focus on their code. Azure Spring Cloud provides lifecycle management using comprehensive monitoring and diagnostics, configuration management, service discovery, CI/CD integration, blue-green deployments, and more. If your team or organization is predominantly Spring, Azure Spring Cloud is an ideal option.
+--
 
 Regarding *the applications to be deployed* Azure comes also with its own Azure container reistry (ACR).
 
