--- a/solutions/endusermgmt_azure_aad/index.asciidoc
+++ b/solutions/endusermgmt_azure_aad/index.asciidoc
@@ -26,7 +26,7 @@ This feature started with the idea to give external users access to Azure resour
 Currently there is a lot of movement in this area. Microsoft was already porting features from B2C to B2B. The new external identities marks the shift towards even more integration between the two. Currently it refers to two things: (1) the new umbrella term unifying the so far separate B2B/ B2C features and (2) additional features that were added to AAD B2B. According to https://www.microsoftpartnercommunity.com/atvwr79957/attachments/atvwr79957/UK_Area_db/387/2/External%20Identities.pdf[this source] this might mean a unified service offering that combines the B2B and B2C features.
 According to feedback from the microsoft product group it probably does not mean a a new separate service that unifies the existing B2B and B2C. The majority is voting for creatin an option within AAD B2B to group the users in a logical container within a tenant. The current hassle could be then avoided that comes with the different B2C one.
 
-=== Enduser Mgmt Application Level
+=== Enduser Management Application Level
 ==== Overview
 
 The solution is to use one of the introduced AAD features and the following platform features. The focus of this chapter is to introduce the relevant features. Recommendations for a concrete setup are given in the next chapter.
@@ -90,7 +90,7 @@ The AAD supports the following:
 
 Authentication can be done by an external identity provider.
 
-=== Enduser Mgmt Infrastructure Level
+=== Enduser Management Infrastructure Level
 
 The core service is Azure AD. A direct monitoring with Azure Services is hard since the infrastructure monitoring tools also require Azure AD authentication. Possible native tools are:
 
